# quip-sharp

./: .gitignore  README.md  eval_llama.py  eval_ppl.py  eval_zeroshot.py  example_generate.py  gen_speed.py  hack_emb.py  hessian_offline.py  hessian_offline_llama.py  hfize_llama.py  interactive_gen.py  ppl_llama.py  pyproject.toml  q2k.sh  quantize_llama.py  requirements.txt
docs/: #index.md#  index.html  index.md
eval/: eval_ppl.py  eval_speed.py  eval_zeroshot.py  interactive_gen.py
model/: #llama.py#  graph_wrapper.py  llama.py  llama_nofuse.py  mistral.py  version.py
modules/: llamacpp_hf.py
quantize_llama/: finetune_e2e_llama.py  hessian_offline_llama.py  hfize_llama.py  quantize_finetune_llama.py
quiptools/: benchmark_e8p.py  quiptools.cu  quiptools_wrapper.cpp  setup.py  test_d4.py  test_e8p.py
sbatch/: D4_bits_sweep.sh  chat_4bit_packed.sh  e8237b.sh  e8p_requant.sh  finetune.sh  finetune_4bit.sh  finetune_4bit_cr15.sh  finetune_adam.sh  finetune_adam_early.sh  finetune_adamw.sh  finetune_llama1.sh  finetune_llama2.sh  finetune_orig.sh  finetune_test.sh  greedy_sweep.sh  hilr_susv_test.sh  icml_llama_eval.sh  icml_ppl.sh  llama1_hessian.sh  llama1_nolr_test.sh  llama2_chat_hessian.sh  llama2_chat_quantize.sh  llama2_nolr_test.sh  lr_sweep_1.sh  lr_sweep_2.sh  mistral_hermes.sh  mistral_hermes_hessian.sh  mixtral.sh  mixtral_fp16.sh  mixtral_hessian.sh  nofuse_test.sh  packed_4bit.sh  remain.sh  rvq3b.sh  rvq4b.sh  sc_sweep.sh  zeroshot_falcon.sh
scripts/: download_hf.py  parse_proxy.py  plot_data.pkl  plot_lattice.py  upload_hf.py
(+116 files in other folders)
